1、代码修复； 2、部署到docker: dockerfile、docker compose file配置